# customersupport_rag

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt
evaluation_results/: evaluation_results.html  mean_scores.html
src/: config.py
src/api/: main.py
src/api/static/: index.html  script.js  styles.css
src/evaluation/: evalute_rag.py
src/graph/: answer_check_node.py  answer_node.py  docs_grader_node.py  graph.py  question_check_node.py  retriever_node.py  state.py  topic_check_node.py  utils.py
src/indexing/: preprocess.py
