[project]
name = "customer-support-agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=3.2.0",
    # "en-core-web-sm",
    "faiss-cpu>=1.9.0.post1",
    "fastapi>=0.115.7",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.15",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama",
    "langchain-openai>=0.3.2",
    "langgraph>=0.2.67",
    "langgraph-cli[inmem]",
    "llm-guard[onnxruntime]>=0.3.15",
    "loguru>=0.7.3",
    "polars>=1.22.0",
    "pre-commit>=4.1.0",
    "pyarrow>=19.0.0",
    "pytest>=8.3.4",
    "ragas>=0.3.0",
    "ruff>=0.9.6",
    "sentence-transformers>=3.4.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pylint>=3.3.7",
    "ruff>=0.9.6",
]
